# bridge-echo

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: index.html
service/: bridge-echo.service
src/: alerts.rs  claude.rs  config.rs  injection.rs  main.rs  monitor_cli.rs  prompt.rs  queue.rs  router.rs  session.rs  state.rs  tracker.rs  trust.rs  voice_session.rs
src/handlers/: call_ended.rs  chat.rs  mod.rs  monitor.rs  session_started.rs
