[package]
name = "bridge-echo"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "HTTP bridge for Claude Code CLI"
license = "MIT"
repository = "https://github.com/dnacenta/bridge-echo"
keywords = ["claude", "claude-code", "bridge", "ai"]
categories = ["web-programming::http-server"]
authors = ["dnacenta"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
