[package]
name = "bridge-echo"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
description = "HTTP bridge for Claude Code CLI"
license = "AGPL-3.0"
repository = "https://github.com/dnacenta/bridge-echo"
keywords = ["claude", "claude-code", "bridge", "ai"]
categories = ["web-programming::http-server"]
authors = ["dnacenta"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
